(lang dune 3.18)
(using coq 0.8)
(name streams)

(generate_opam_files true)

(source
 (github DabrowskiFr/Streams))

(authors "Frédéric Dabrowski <frederic.dabrowski@univ-orleans.fr>")

(maintainers "Frédéric Dabrowski <frederic.dabrowski@univ-orleans.fr>")

(license AGPL-3.0-only)

(documentation https://url/to/documentation)

(package
 (name streams)
 (synopsis "Streams in Coq")
 (description "Streams in Coq"))
